added keyboard layout

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,6 +10,77 @@
 </ion-header>
 
 <ion-content>
-    <p>Home works</p>
-   
+  <p>Home works</p>
+
 </ion-content>
+
+<ion-footer>
+
+  <ion-grid>
+    <div>
+
+      <ion-row class="btns-row">
+        <ion-col class="grid-col-gap" size="3">
+          <ion-button Color="medium" expand="full">7</ion-button>
+        </ion-col>
+        <ion-col class="grid-col-gap" size="3">
+          <ion-button Color="medium" expand="full">8</ion-button>
+        </ion-col>
+        <ion-col class="grid-col-gap" size="3">
+          <ion-button Color="medium" expand="full">9</ion-button>
+        </ion-col>
+        <ion-col class="grid-col-gap" size="3">
+          <ion-button Color="dark" expand="full">&#247;</ion-button>
+        </ion-col>
+      </ion-row>
+
+      <ion-row class="btns-row">
+        <ion-col class="grid-col-gap" size="3">
+          <ion-button Color="medium" expand="full">4</ion-button>
+        </ion-col>
+        <ion-col class="grid-col-gap" size="3">
+          <ion-button Color="medium" expand="full">5</ion-button>
+        </ion-col>
+        <ion-col class="grid-col-gap" size="3">
+          <ion-button Color="medium" expand="full">6</ion-button>
+        </ion-col>
+        <ion-col class="grid-col-gap" size="3">
+          <ion-button Color="dark" expand="full">&#xd7;</ion-button>
+        </ion-col>
+      </ion-row>
+
+      <ion-row class="btns-row">
+        <ion-col class="grid-col-gap" size="3">
+          <ion-button Color="medium" expand="full">1</ion-button>
+        </ion-col>
+        <ion-col class="grid-col-gap" size="3">
+          <ion-button Color="medium" expand="full">2</ion-button>
+        </ion-col>
+        <ion-col class="grid-col-gap" size="3">
+          <ion-button Color="medium" expand="full">3</ion-button>
+        </ion-col>
+        <ion-col class="grid-col-gap" size="3">
+          <ion-button Color="dark" expand="full">&#x2212;</ion-button>
+        </ion-col>
+      </ion-row>
+
+      <ion-row class="btns-row">
+        <ion-col class="grid-col-gap" size="3">
+          <ion-button Color="medium" expand="full">&#8226;</ion-button>
+        </ion-col>
+        <ion-col class="grid-col-gap" size="3">
+          <ion-button Color="medium" expand="full">0</ion-button>
+        </ion-col>
+        <ion-col class="grid-col-gap" size="3">
+          <ion-button Color="medium" expand="full">AC</ion-button>
+        </ion-col>
+        <ion-col class="grid-col-gap" size="3">
+          <ion-button Color="dark" expand="full">&#x2b;</ion-button>
+        </ion-col>
+      </ion-row>
+
+    </div>
+
+  </ion-grid>
+
+</ion-footer>
