--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,7 +10,11 @@
 </ion-header>
 
 <ion-content>
-  <p>Home works</p>
+  <ion-item>
+    <ion-label>Currency: </ion-label>
+    <ion-label color="primary">{{ currency }}</ion-label>
+    <ion-button slot="end" fill="clear" (click)="showBasicPiker()">Select</ion-button>
+  </ion-item>
 
 </ion-content>
 
