ion-sliding-item ui finished

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,7 +10,7 @@
 </ion-header>
 
 <ion-content>
-  <ion-item>
+  <!-- <ion-item>
     <ion-label>currency0: </ion-label>
     <ion-label color="primary">{{ currency0 }}</ion-label>
     <ion-button slot="end" fill="clear" (click)="showBasicPiker('currency0')">Select</ion-button>
@@ -20,7 +20,38 @@
     <ion-label>currency1: </ion-label>
     <ion-label color="primary">{{ currency1 }}</ion-label>
     <ion-button slot="end" fill="clear" (click)="showBasicPiker('currency1')">Select</ion-button>
-  </ion-item>
+  </ion-item> -->
+
+
+
+  <ion-item-sliding>
+
+    <ion-item-options side="start">
+      <ion-item-option color="danger">
+        <ion-icon slot="icon-only" name="trash"></ion-icon>
+      </ion-item-option>
+    </ion-item-options>
+
+    <ion-item>
+      <!-- <ion-icon slot="start" name="more"></ion-icon> -->
+      <ion-note color="dark">
+        <h3>CNY</h3>
+      </ion-note>
+
+      <ion-label slot="end">
+        <h2 class="currency-item-formula">2000</h2>
+        <p class="currency-item-formula">1000 + 1000</p>
+      </ion-label>
+    </ion-item>
+
+    <ion-item-options side="end">
+      <ion-item-option>
+        <ion-icon slot="icon-only" name="list-box"></ion-icon>
+      </ion-item-option>
+    </ion-item-options>
+
+  </ion-item-sliding>
+
 </ion-content>
 
 <ion-footer>
