--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -3,22 +3,10 @@
   overflow: hidden;
 }
 
-.btns-row{
-  margin-left: 0px;
-}
-
-ion-button {
-  font-size: 25px;
-  height: 80px;
-  margin-left: 5px;
-  border-radius: 25px !important;
-}
-
-.grid-col-gap {
-  padding: 0;
-  margin: 0;
-}
-
 .currency-item-formula{
   text-align: end;
+}
+
+ion-content{
+  padding-top: 100px;
 }
