add item component

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -6,17 +6,7 @@
 
   <ion-item-sliding *ngFor="let currency of defaultCurrencys" #slidingItem>
 
-    <ion-item lines="none">
-      <!-- <ion-icon slot="start" name="more"></ion-icon> -->
-      <ion-note color="dark">
-        <h3>{{currency.text}}</h3>
-      </ion-note>
-
-      <ion-label slot="end">
-        <h2 class="currency-item-formula">2000</h2>
-        <p class="currency-item-formula">1000 + 1000</p>
-      </ion-label>
-    </ion-item>
+    <c-item [currency]='currency'></c-item>
 
     <ion-item-options side="end">
       <ion-item-option>
@@ -27,8 +17,6 @@
     </ion-item-options>
 
   </ion-item-sliding>
-
-
 
 </ion-content>
 
