add calculator component

--- a/src/app/widget/item/item.component.html
+++ b/src/app/widget/item/item.component.html
@@ -1,11 +1,8 @@
-<ion-item lines="none">
+<ion-item lines="none" button>
   <!-- <ion-icon slot="start" name="more"></ion-icon> -->
-  <ion-note color="dark">
+  <ion-note class="note__item" color="dark">
     <h3>{{currency.text}}</h3>
   </ion-note>
 
-  <ion-label slot="end">
-    <h2 class="currency-item-formula">2000</h2>
-    <p class="currency-item-formula">1000 + 1000</p>
-  </ion-label>
+  <c-calculator slot="end"></c-calculator>
 </ion-item>
