--- a/src/app/widget/item/item.component.html
+++ b/src/app/widget/item/item.component.html
@@ -3,6 +3,5 @@
   <ion-note class="note__item" color="dark">
     <h3>{{currency.text}}</h3>
   </ion-note>
-
-  <c-calculator slot="end"></c-calculator>
+  <ng-content></ng-content>
 </ion-item>
