feat:calculate each item works

--- a/src/app/widget/item/item.component.html
+++ b/src/app/widget/item/item.component.html
@@ -1,4 +1,4 @@
-<ion-item lines="none" button>
+<ion-item lines="none" button (click)="getSelectId()">
   <!-- <ion-icon slot="start" name="more"></ion-icon> -->
   <ion-note class="note__item" color="dark">
     <h3>{{currency.text}}</h3>
