--- a/src/app/widget/keypad/keypad.component.html
+++ b/src/app/widget/keypad/keypad.component.html
@@ -53,7 +53,7 @@
         <ion-button Color="medium" expand="full" (click)= "setInput('0')">0</ion-button>
       </ion-col>
       <ion-col class="grid-col-gap" size="3">
-        <ion-button Color="medium" expand="full" (click)= "clearKbInput('clear')">C</ion-button>
+        <ion-button Color="medium" expand="full" (click)= "clearKbInput()">C</ion-button>
       </ion-col>
       <ion-col class="grid-col-gap" size="3">
         <ion-button Color="dark" expand="full" (click)= "setInput('+')">&#x2b;</ion-button>
