--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -5,10 +5,11 @@
 <ion-content>
 
 
-  <ion-item-sliding *ngFor="let currency of displayCurrencys" #slidingItem>
+  <ion-item-sliding *ngFor="let currency of displayCurrencys" 
+                    #slidingItem>
 
     <c-item [currency]='currency'>
-      <c-calculator slot="end"></c-calculator>
+      <c-calculator [currency]='currency' slot="end"></c-calculator>
     </c-item>
     <c-item-option [currency]='currency'
                    [allCurrencys]='allCurrencys' 
@@ -17,6 +18,7 @@
     </c-item-option>
 
   </ion-item-sliding>
+
 
 </ion-content>
 
