--- a/src/app/widget/calculator/calculator.component.html
+++ b/src/app/widget/calculator/calculator.component.html
@@ -1,4 +1,4 @@
 <ion-label class="label__item">
-  <h2>{{result}}</h2>
-  <p>{{kbInputs}}</p>
+  <h2>{{currency.kpResult}}</h2>
+  <p>{{currency.kpInput}}</p>
 </ion-label>
