selected item highlight

--- a/src/app/widget/item/item.component.scss
+++ b/src/app/widget/item/item.component.scss
@@ -1,3 +1,7 @@
-.note__item{
-    padding: 10px 0;
+.note__item {
+  padding: 10px 0;
 }
+
+.selected-item {
+    --background:var(--ion-color-light);
+ }
