--- a/src/app/widget/item/item.component.html
+++ b/src/app/widget/item/item.component.html
@@ -1,4 +1,8 @@
-<ion-item lines="none" button (click)="getSelectId()">
+<ion-item [class.selected-item]= "currency.isSelected" 
+          lines="none" 
+          button 
+          (click)="getSelectId()"
+          (click)="highlightSelected()">
   <!-- <ion-icon slot="start" name="more"></ion-icon> -->
   <ion-note class="note__item" color="dark">
     <h3>{{currency.text}}</h3>
