sliding items exchange currency works

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -12,8 +12,8 @@
       <c-calculator [currency]='currency' slot="end"></c-calculator>
     </c-item>
     <c-item-option [currency]='currency'
-                   [allCurrencys]='allCurrencys' 
-                   [displayCurrencys] ='displayCurrencys'
+                   [allCurrencies]='allCurrencys' 
+                   [displayCurrencies] ='displayCurrencys'
                    [slidingItem]='slidingItem'>
     </c-item-option>
 
