add item button layout

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,5 +1,7 @@
 <ion-header>
-  <c-toolbar></c-toolbar>
+  <c-toolbar>
+    <c-item-add slot="end"></c-item-add>
+  </c-toolbar>
 </ion-header>
 
 <ion-content>
