--- a/src/app/widget/toolbar/toolbar.component.html
+++ b/src/app/widget/toolbar/toolbar.component.html
@@ -1,8 +1,9 @@
 <ion-toolbar>
-  <ion-buttons slot="start">
+  <!-- <ion-buttons slot="start">
     <ion-menu-button></ion-menu-button>
-  </ion-buttons>
+  </ion-buttons> -->
   <ion-title>
     Currency
   </ion-title>
+  <ng-content></ng-content>
 </ion-toolbar>
