--- a/src/app/widget/item-option/item-option.component.html
+++ b/src/app/widget/item-option/item-option.component.html
@@ -1,5 +1,5 @@
 <ion-item-options side="end">
-  <ion-item-option>
+  <ion-item-option expandable>
     <ion-icon slot="icon-only" 
               name="list-box" 
               (click)="showBasicPiker(currency.id, slidingItem)">
