--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -15,7 +15,7 @@
     </c-item>
     <c-item-option [currency]='currency'
                    [allCurrencies]='allCurrencys' 
-                   [displayCurrencies] ='displayCurrencys'
+                   [displayCurrencies] ='displayCurrencies'
                    [slidingItem]='slidingItem'>
     </c-item-option>
 
